--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -1,15 +1,14 @@
 ---
 layout: post
-subtitle: About the site
+subtitle: About us
 title: Who We Are
 description: The background and mission of our engineers and founder
 tags: mastering
 
-color-title:  000
-
 cover: http://i1045.photobucket.com/albums/b459/keenanhi/music-818459_1920_zpsmve5t24h.jpg
-coveralt: interface
+coveralt: baby
 ---
+
 
 #Our Engineers:
 
