more content in blog post

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -9,6 +9,7 @@ cover: http://i1045.photobucket.com/albums/b459/keenanhi/music-818459_1920_zpsmv
 coveralt: baby
 ---
 
+As mastering engineers, we have been passionate about music since we were toddlers. Read our bios below to learn more about us, and why we do what we do!
 
 # Our Engineers:
 
