--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -13,10 +13,11 @@ As mastering engineers, we have been passionate about music since we were toddle
 
 # Our Engineers:
 
+<div class="col-xs-3">
+<img src="http://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 200px;">
+</div>
+
 ### Keenan Hye - Founder and Mastering Engineer
-
-
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/headshot-bw_zps6objpn0n.jpg" alt="Keenan Hye" style="width: 200px;">
 
 I am originally from Madison, Connecticut, and I have been recording, mixing, and mastering music since I was in early high school. I recently earned a degree in Electrical Engineering and Music Recording, and am planning on pursuing a graduate degree in Acoustical Engineering.
 
@@ -26,9 +27,11 @@ To satiate my right brain, I spend most of my down time writing original music a
 
 Helping people make great music is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add.  In the wake of the current [artificial intelligence mastering fad](https://ask.audio/articles/can-we-trust-robots-to-master-our-music), I founded Get Mastered as a testament to the abilities of human mastering engineers. I take pride in producing professional masters at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their music production skills.
 
-### Connor Eichinger - Mastering Engineer
+<div class="col-xs-3">
+<img src="http://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;">
+</div>
 
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/portrait_CJE_zpswernlnw0.jpg" alt="Connor Eichinger" style="width: 200px;">
+### Connor Eichinger - Mastering Engineer
 
 Hailing from Pleasantville, New York, Connor is pursuing a degree in Music Industry with a minor in Recording. He plans to graduate in 2017. I brought Connor on to the Get Mastered team recently, as I was incredibly impressed by his natural talent for mixing and mastering, and his visible drive to produce the best music possible.
 
