blog better-ized

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -13,8 +13,8 @@ As mastering engineers, we have been passionate about music since we were toddle
 
 # Our Engineers:
 
-<div class="col-xs-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 200px;">
+<div class="col-xs-12 col-md-3">
+<img src="http://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 200px;"><br><br>
 </div>
 
 ### Keenan Hye - Founder and Mastering Engineer
@@ -27,8 +27,8 @@ To satiate my right brain, I spend most of my down time writing original music a
 
 Helping people make great music is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add.  In the wake of the current [artificial intelligence mastering fad](https://ask.audio/articles/can-we-trust-robots-to-master-our-music), I founded Get Mastered as a testament to the abilities of human mastering engineers. I take pride in producing professional masters at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their music production skills.
 
-<div class="col-xs-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;">
+<div class="col-xs-12 col-md-3">
+<img src="http://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;"><br><br>
 </div>
 
 ### Connor Eichinger - Mastering Engineer
