--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -19,13 +19,15 @@ As mastering engineers, we have been passionate about music since we were toddle
 
 ### Keenan Hye - Founder and Mastering Engineer
 
-I am originally from Madison, Connecticut, and I have been recording, mixing, and mastering music since I was in early high school. I recently earned a degree in Electrical Engineering and Music Recording, and am planning on pursuing a graduate degree in Acoustical Engineering.
+I am originally from Madison, Connecticut, and I have been producing music since I was in early high school. I recently earned a degree in Electrical Engineering and Music Recording, and am planning on pursuing a graduate degree in Acoustical Engineering.
 
 During the past five years, I have had experience researching human perception of audio quality, creating automated room equalization algorithms, and engineering directional hearing devices to aid people with hearing loss. All of this experience has given me a vast and varied understanding of topics important to mastering and our perception of music, including psychoacoustics, room acoustics, and digital audio processing.
 
 To satiate my right brain, I spend most of my down time writing original music and lyrics (and, of course, recording and mix my music too... though I always hand it off to another engineer to master! Even I don’t believe your skills can ever outgrow a second opinion). I grew up playing saxophone, but now I'm primarily a singer and guitarist in a band. In whatever time I have left, I enjoy learning and understanding any additional instrument I can get my hands on.
 
-Helping people make great music is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add.  In the wake of the current [artificial intelligence mastering fad](https://ask.audio/articles/can-we-trust-robots-to-master-our-music), I founded Get Mastered as a testament to the abilities of human mastering engineers. I take pride in producing professional masters at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their music production skills.
+The rest of the little free time I have left goes to coding and designing this website, as well as listening to podcasts (especially well-produced podcasts such as [Radiolab](http://www.radiolab.org/) and [Song Exploder](http://songexploder.net/)).
+
+Helping people make great audio is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add. I take pride in producing professional audio at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their audio production skills.
 
 <div class="col-xs-12 col-md-3">
 <img src="http://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;"><br><br>
@@ -33,6 +35,6 @@ Helping people make great music is absolutely my passion, and to me there is no 
 
 ### Connor Eichinger - Mastering Engineer
 
-Hailing from Pleasantville, New York, Connor is pursuing a degree in Music Industry with a minor in Recording. He plans to graduate in 2017. I brought Connor on to the Get Mastered team recently, as I was incredibly impressed by his natural talent for mixing and mastering, and his visible drive to produce the best music possible.
+Hailing from Pleasantville, New York, Connor is pursuing a degree in Music Industry with a minor in Recording. He plans to graduate in 2017. I brought Connor on to the Get Mastered team recently, as I was incredibly impressed by his natural talent for mixing and mastering, and his visible drive to produce the best finished project possible, no matter how long it takes.
 
 Connor has years of experience working with audio in various contexts, including producing and recording, mixing and mastering, sound design, and film post production. He has composed and performed acousmatic music in a quadraphonic setting as well as through live sound diffusion with [Harvard University’s Hydra loudspeaker orchestra](http://huseac.fas.harvard.edu/Hydra/). Connor has also composed music for commercials and short films, and is currently finalizing a 5 track EP which will be his debut as a solo artist.
