--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -5,7 +5,7 @@ title: Who We Are
 description: The background and mission of our engineers and founder
 tags: mastering
 
-cover: http://i1045.photobucket.com/albums/b459/keenanhi/music-818459_1920_zpsmve5t24h.jpg
+cover: https://i1045.photobucket.com/albums/b459/keenanhi/music-818459_1920_zpsmve5t24h.jpg
 coveralt: baby
 ---
 
@@ -14,7 +14,7 @@ As mastering engineers, we have been passionate about music since we were toddle
 # Our Engineers:
 
 <div class="col-xs-12 col-md-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 200px;"><br><br>
+<img src="https://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 200px;"><br><br>
 </div>
 
 ### Keenan Hye - Founder and Mastering Engineer
@@ -30,7 +30,7 @@ The rest of the little free time I have left goes to coding and designing this w
 Helping people make great audio is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add. I take pride in producing professional audio at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their audio production skills.
 
 <div class="col-xs-12 col-md-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;"><br><br>
+<img src="https://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 200px;"><br><br>
 </div>
 
 ### Connor Eichinger - Mastering Engineer
