--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -15,7 +15,7 @@ As mastering engineers, we have been passionate about music since we were toddle
 
 
 <div class="col-xs-12 col-md-3">
-<img src="https://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 150px;"><br><br>
+<img src="https://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 100%;"><br><br>
 </div>
 
 ### Keenan Hye - Founder and Mastering Engineer
@@ -33,7 +33,7 @@ Helping people make great audio is absolutely my passion, and to me there is no 
 <br>
 
 <div class="col-xs-12 col-md-3">
-<img src="https://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 150px;"><br><br>
+<img src="https://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 100%;"><br><br>
 </div>
 
 ### Connor Eichinger - Mastering Engineer
@@ -45,12 +45,12 @@ Connor has years of experience working with audio in various contexts, including
 <br>
 
 <div class="col-xs-12 col-md-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/lee-headshot_zpsfutlhbgc.png" alt="lee headshot" style="width: 150px;"><br><br>
+<img src="http://i1045.photobucket.com/albums/b459/keenanhi/lee-headshot_zpsfutlhbgc.png" alt="lee headshot" style="width: 100%;"><br><br>
 </div>
 
 ### Lee Schuna - Mastering Engineer
 
-#### Producer name: Analog Self
+#### Producer name: Analogue Self
 
 From New Richmond, Wisconsin, Lee has been learning the art of recording since age 13. Starting out recording covers of songs for YouTube, he eventually started writing his own music and recording all the parts in his parent’s basement. Working with the limitations of lo-fi equipment and the old Intro version of Ableton, learning to creatively solve audio problems became hugely important to his process.
 
