https blog bug attempted fix

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -45,7 +45,7 @@ Connor has years of experience working with audio in various contexts, including
 <br>
 
 <div class="col-xs-12 col-md-3">
-<img src="http://i1045.photobucket.com/albums/b459/keenanhi/lee-headshot_zpsfutlhbgc.png" alt="lee headshot" style="width: 100%;"><br><br>
+<img src="https://i1045.photobucket.com/albums/b459/keenanhi/lee-headshot_zpsfutlhbgc.png" alt="lee headshot" style="width: 100%;"><br><br>
 </div>
 
 ### Lee Schuna - Mastering Engineer
