lots of small style updates

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -14,26 +14,26 @@ As mastering engineers, we have been passionate about music since we were toddle
 # Our Engineers:
 
 
-<div class="col-xs-12 col-md-3">
-<img src="https://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" alt="Keenan Hye" style="width: 100%;"><br><br>
+<div class="col-xs-12 col-md-3" id="#keenan">
+<img src="/img/headshots/keenan.png" alt="Keenan Hye" style="width: 100%;"><br><br>
 </div>
 
 ### Keenan Hye - Founder and Mastering Engineer
 
-I am originally from Madison, Connecticut, and I have been producing music since I was in early high school. I recently earned a degree in Electrical Engineering and Music Recording, and am planning on pursuing a graduate degree in Acoustical Engineering.
+My name is Keenan, and I'm currently a candidate for a Masters of Engineering in Acoustics at Penn State University. I am originally from Madison, Connecticut, and I have been producing music since I was in early high school. I earned my undergraduate degree in Electrical Engineering and Music Recording, and have years of practical experience under my belt.
 
 During the past five years, I have had experience researching human perception of audio quality, creating automated room equalization algorithms, and engineering directional hearing devices to aid people with hearing loss. All of this experience has given me a vast and varied understanding of topics important to mastering and our perception of music, including psychoacoustics, room acoustics, and digital audio processing.
 
-To satiate my right brain, I spend most of my down time writing original music and lyrics, and, of course, recording and mixing my own music as well. I grew up playing saxophone, but now I'm primarily a singer and guitarist. Despite these preferences, I truly enjoy learning and understanding any instrument I can get my hands on!
-
-The rest of the little free time I have left goes to coding and designing this website, as well as listening to podcasts (especially well-produced podcasts, such as [Radiolab](http://www.radiolab.org/) and [Song Exploder](http://songexploder.net/)).
+To satiate my right brain, I spend most of my down time writing original music and lyrics, and, of course, recording and mixing my own music as well. I grew up playing saxophone, but now I'm primarily a singer and guitarist.
 
 Helping people make great audio is absolutely my passion, and to me there is no substitute for the human touch that a real mastering engineer can add. I take pride in producing professional audio at prices that are much easier to swallow than most other professional mastering services, yet which still allow myself and other engineers to make a living helping artists that want to enhance their audio production skills.
 
+If you would like to learn more about me, <a href="http://keenanhye.com" target="_blank">my personal website can be found here</a>.
+
 <br>
 
-<div class="col-xs-12 col-md-3">
-<img src="https://i1045.photobucket.com/albums/b459/keenanhi/connor-circ_zpsc16ertza.png" alt="Connor Eichinger" style="width: 100%;"><br><br>
+<div class="col-xs-12 col-md-3"  id="#connor">
+<img src="/img/headshots/connor.png" alt="Connor Eichinger" style="width: 100%;"><br><br>
 </div>
 
 ### Connor Eichinger - Mastering Engineer
@@ -44,8 +44,8 @@ Connor has years of experience working with audio in various contexts, including
 
 <br>
 
-<div class="col-xs-12 col-md-3">
-<img src="https://i1045.photobucket.com/albums/b459/keenanhi/lee-headshot_zpsfutlhbgc.png" alt="lee headshot" style="width: 100%;"><br><br>
+<div class="col-xs-12 col-md-3"  id="#lee">
+<img src="/img/headshots/lee.png" alt="lee headshot" style="width: 100%;"><br><br>
 </div>
 
 ### Lee Schuna - Mastering Engineer
