smaller pics on who we are blog

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -14,7 +14,7 @@ As mastering engineers, we have been passionate about music since we were toddle
 # Our Engineers:
 
 
-<div class="col-xs-12 col-md-3" id="#keenan">
+<div class="col-xs-3" id="#keenan">
 <img src="/img/headshots/keenan.png" alt="Keenan Hye" style="width: 100%;"><br><br>
 </div>
 
@@ -32,7 +32,7 @@ If you would like to learn more about me, <a href="http://keenanhye.com" target=
 
 <br>
 
-<div class="col-xs-12 col-md-3"  id="#connor">
+<div class="col-xs-3"  id="#connor">
 <img src="/img/headshots/connor.png" alt="Connor Eichinger" style="width: 100%;"><br><br>
 </div>
 
@@ -44,7 +44,7 @@ Connor has years of experience working with audio in various contexts, including
 
 <br>
 
-<div class="col-xs-12 col-md-3"  id="#lee">
+<div class="col-xs-3"  id="#lee">
 <img src="/img/headshots/lee.png" alt="lee headshot" style="width: 100%;"><br><br>
 </div>
 
