lots of tiny text changes

--- a/blog/about/_posts/2016-04-12-Who-We-Are.md
+++ b/blog/about/_posts/2016-04-12-Who-We-Are.md
@@ -5,7 +5,7 @@ title: Who We Are
 description: The background and mission of our engineers 
 tags: mastering
 
-cover: https://i1045.photobucket.com/albums/b459/keenanhi/music-818459_1920_zpsmve5t24h.jpg
+cover: /img/backgrounds/tape.jpg
 coveralt: baby
 ---
 
